@@ -1,3 +1,6 @@
+28. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
+	- touch function of DBCatalog moved to proper place
+
 27. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- allow gui often to refresh
 	- only create exif data if its enabled to read exif data
